--- a/cv.css
+++ b/cv.css
@@ -16,14 +16,28 @@ body
 	align-items: center;
 	min-height: 100vh;
 }
-
+.header
+{
+	position: absolute;
+	left: 50;
+	top: 0;
+	padding: 25px 0;
+}
+.header a 
+{
+	text-decoration: none;
+	font-size: 1.2em;
+	font-weight: 400;
+	color: #777;
+	letter-spacing: 1px;
+}
 .container
 {
 	position: relative;
 	width:  100%;
 	max-width: 1000px;
 	min-height: 1000px;
-	margin: 50px;
+	margin: 75px;
 	background: #fff;
 	display: grid;
 	grid-template-columns: 1fr 2fr;
@@ -276,7 +290,9 @@ p
 {
 	.container
 	{
-		margin: 10px;
+		margin-bottom: 5px;
+		margin-left: 5px;
+		margin-right: 5px;
 		grid-template-columns: repeat(1, 1fr);
 	}
 	.interest ul
